# controllability

./: .gitignore  .gitmodules  fast_test.py  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.py  main.tex  main.toc  pyproject.toml  references.bib  test_bilinear_pe.py
control/: __init__.py  gramians.py  hautus.py  visualization.py
examples/: __init__.py  basic_hautus_test.py  controllability.py  controllability_noise_convergence.py  controllability_q_convergence.py  controllability_q_minimal.py  controllability_q_noise_convergence.py  controllability_real_data.py  controllability_reduced.py  error_convergence.py  experiment_behavioral.py  experiment_conditioning.py  experiment_uncontrollable.py  finite_candidate_check.py  main.py  method_comparison.py  noise_effects_behavioral.py  pi_bias_scaling_sweep.py  pi_unbiased_iid_demo.py  spring_mass_damper.py  systems.py  trajectory_visualization.py
sections/: appendix_proofs.tex  experiments.tex  hautus.tex  introduction.tex  stochastic.tex
src/: __init__.py  datasets.py  gramians.py  sde.py  systems.py  utils.py  visualization.py
tests/: test_gramians.py
